--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,18 @@
+.idea
+/pub/
+/bitrix/
+/upload/
 /vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+*.log
+*.txt
+*.xml
+*.css.map
+*.html
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+*.zip
+*.zip*
+*.tar
+*.tar*
+*.enc
+*.enc*
